--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   margin-left: 5%;
   margin-right: 5%;
   margin-top: 3%;
+  margin-bottom: 3%;
   background-color: white;
 }
 .nomal-text{
@@ -39,4 +40,25 @@
   max-height: 100%;
   margin-top: 5%;-top: 5%;
   pointer-events: none;
+}
+
+@media only screen and (max-width: 720px){
+  .grid-bottom {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+  .grid-bottom-in-in {
+    display: grid;
+    grid-template-columns: 100%;
+    background-color: white;
+    box-shadow:0 3px 15px 0 rgb(60 68 87 / 10%);
+    margin:4%;
+  }
+  .grid-bottom-in-node-text{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 3%;
+    background-color: white;
+  }
+  
 }
