--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,19 @@
 .App-logo {
   max-width: 100%;
   max-height: 100%;
-  margin-top: 5%;-top: 5%;
+  margin-top: 5%;;
   pointer-events: none;
 }
 
-@media only screen and (max-width: 720px){
+@media only screen and (max-width: 1200px){
+  .grid-bottom {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+  
+}
+
+@media only screen and (max-width: 800px){
   .grid-bottom {
     display: grid;
     grid-template-columns: 100%;
