--- a/src/App.css
+++ b/src/App.css
@@ -119,10 +119,14 @@
   }
   .top-text{
     font-style:normal;
-    font-size: 25px;
+    font-size: 22px;
     margin: 10%;;
     color: #3c4457;
 
+  }
+  .icon{
+    max-width: 24px;
+    max-height: 24px;
   }
   
 }
